# titrate

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  ONBOARDING_REPORT.md  README.md  SUMMARY.md  alpha04_spec.txt  coverage-summary.txt  expected_output.txt  helloworld.tr  mega_test.tr  mega_test_03.tr  stdlib_full_output.txt  stdlib_runtest_output.txt  test_shelf_close.db  test_shelf_keys.db  test_shelf_putget.db  test_shelf_sync.db  titrate.py
demos/: anagram_finder.tr  append_file.tr  archive_lister.tr  async_fetch.tr  base64_encoder.tr  base_converter.tr  binary_search_tree.tr  caesar_cipher.tr  case_count.tr  char_freq.tr  chat_server.tr  check_encoding.tr  checksum_dir.tr  cipher_demo.tr  collatz.tr  columnate.tr  compare_dir.tr  compare_files.tr  count_lines.tr  csv_filter.tr  csv_join.tr  csv_stat.tr  csv_to_json.tr  diff_checker.tr  diffeq_sim.tr  email_validator.tr  env_dump.tr  extract_emails.tr  extract_lines.tr  file_find.tr  file_rename.tr  file_server.tr  file_splitter.tr  file_type.tr  file_watcher.tr  find_duplicates.tr  find_long_lines.tr  flatten_json.tr  graph_bfs_dfs.tr  grep.tr  (+77 more)
docs/: PERFORMANCE_EXPECTATIONS.md  index.md  package-lock.json  package.json
examples/: chemistry.tr  closures.tr  fibonacci.tr  file_io.tr  generics.tr  hello.tr  http_client.tr  json_parse.tr  linked_list.tr  math_demo.tr  operator_overload.tr  pattern_matching.tr  (+3 more)
trc/: Cargo.toml  build.rs  stdlib_failures_detail.txt
trc/src/: analyzer.rs  ast.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
trc/src/analyzer/: closures.rs  errors.rs  exprs.rs  inference.rs  mod.rs  registration.rs  scope.rs  stmts.rs  tests.rs  types.rs
trc/src/ast/: mod.rs  nodes.rs  pretty_print.rs  types.rs
trc/src/bytecode/: chunk.rs  compiler.rs  frame.rs  mod.rs  opcodes.rs  value.rs  value_impl.rs  vm.rs
trc/src/bytecode/compiler/: chunk.rs  expr.rs  generics.rs  inference.rs  mod.rs  optimization.rs  resolver.rs  stmt.rs  symbols.rs
trc/src/bytecode/vm/: call.rs  cast.rs  mod.rs  object.rs  operators.rs  step.rs  tests.rs
trc/src/bytecode/vm/natives/: atomic.rs  builtins.rs  condvar.rs  cryptoext.rs  ctypes.rs  directory.rs  encoding.rs  file.rs  hash.rs  json.rs  lookup.rs  lz4.rs  lzma.rs  math.rs  mmap.rs  mod.rs  multiprocessing.rs  mutex.rs  net.rs  path.rs  platform.rs  random.rs  regex.rs  semaphore.rs  socket.rs  sqlite.rs  ssl.rs  string.rs  subprocess.rs  system.rs  tempfile.rs  thread.rs  time.rs  zip.rs  zlib.rs  zstd.rs
trc/src/codegen/: mod.rs
trc/src/codegen/llvm/: enum_codegen.rs  linker.rs  mod.rs  native_bridge.rs  ownership.rs  target_wrappers.rs  tuple_codegen.rs  types.rs  vtable.rs
trc/src/interpreter/: env.rs  eval.rs  execution.rs  heap.rs  methods.rs  mod.rs  operators.rs  tests.rs  value.rs
trc/src/lexer/: mod.rs  scanner.rs  token.rs
trc/src/parser/: declarations.rs  expressions.rs  mod.rs  patterns.rs  statements.rs  types.rs
trc/tests/: batch_runtest.rs  compound_assign_test.rs  do_while_subprocess_test.rs  error_format_test.rs  incr_decr_ternary.rs  lang_double_test.rs  lang_integer_test.rs  lang_optional_test.rs  lang_result_test.rs  lang_string_test.rs  lexer_fuzz.rs  llvm_ownership.rs  llvm_types.rs  mega_test.rs  mega_test_02.rs  mega_test_03.rs  native_bench.rs  native_hello.rs  native_mega_test.rs  native_registry.rs  native_stdlib_test.rs  parser_errors.rs  parser_fuzz.rs  parser_property.rs  single_runtest.rs  stdlib_extended_test.rs  stdlib_parse_test.rs  stdlib_runtest.rs  stdlib_test.rs  vm_fuzz.rs
(+1723 files in other folders)
