[package]
name = "trc"
version = "0.1.0"
edition = "2021"
description = "Titrate language compiler and interpreter"

[[bin]]
name = "trc"
path = "src/main.rs"

[lib]
name = "trc"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
regex = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
percent-encoding = "2"
