[package]
name = "trc"
version = "0.3.0-alpha"
edition = "2021"
description = "Titrate language compiler and interpreter"

[[bin]]
name = "trc"
path = "src/main.rs"

[lib]
name = "trc"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
regex = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
crc32fast = "1.4"
base64 = "0.22"
percent-encoding = "2"
rand = "0.8"
flate2 = "1.0"
memmap2 = "0.9"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
native-tls = "0.2"
inkwell = { version = "0.9", default-features = false, features = ["llvm22-1-no-llvm-linking", "target-x86"] }
# Direct llvm-sys dep so we can enable `disable-alltargets-init`, which together
# with inkwell's `no-llvm-linking` makes the build script skip llvm-config
# entirely. We link LLVM-C.lib manually in build.rs.
llvm-sys = { version = "221", features = ["disable-alltargets-init"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
